<?xml version="1.0"?>
<package format="2">
  <name>my_drone_nav</name>
  <version>0.0.1</version>
  <description>The navigation configuration package for Mid-360 Drone</description>

  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>            <depend>tf2</depend>                 <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>   <depend>eigen_conversions</depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend> 
  <exec_depend>pointcloud_to_laserscan</exec_depend>

</package>